--- a/aula-04/dom/index.html
+++ b/aula-04/dom/index.html
@@ -16,23 +16,25 @@
     <div class="lista">
       <h1 class="lista__title title">Suas Finanças</h1>
       <h2 class="lista__subtitle subtitle">Novo item para controle</h2>
+     
       <form action="" class="lista__form">
         <div class="lista__form-group">
           <label for="" class="lista__label">Item</label>
-          <input type="text" class="lista__input" id="" placeholder="Insira uma nota">
+          <input type="text" class="lista__input" id="listaInputNome" placeholder="Insira uma nota">
         </div>
         <div class="lista__form-group">
           <label for="" class="lista__label">Valor</label>
-          <input type="number" class="lista__input" id="" placeholder="0,00">
+          <input type="number" class="lista__input" id="listaInputValor" placeholder="0,00">
         </div>
         <div class="lista__form-group">
           <label for="" class="lista__label">Data</label>
-          <input type="text" class="lista__input" id="" placeholder="xx/xx/xxxx">
+          <input type="text" class="lista__input" id="listaInputData" placeholder="xx/xx/xxxx">
         </div>
         <div class="lista__form-group">
           <button class="button lista__button">Salvar</button>
         </div>
       </form>
+
     </div>
     <div class="extrato">
       <h2 class="extrato__subtitle subtitle">Seu extrato</h2>
@@ -45,7 +47,7 @@
       </table>
     </div>
   </div>
-  <script src="js/script.js"></script>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
